# -une-application-de-gestion-des-tudiants

./: CMakeLists.txt  README.md  ajouteretudient.cpp  ajouteretudient.h  ajouteretudient.ui  ajouternote.cpp  ajouternote.h  ajouternote.ui  consulter.cpp  consulter.h  consulter.ui  filtrer.cpp  filtrer.h  filtrer.ui  listev.cpp  listev.h  listev.ui  listnv.cpp  listnv.h  listnv.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modifiercne.cpp  modifiercne.h  modifiercne.ui  modifierdate.cpp  modifierdate.h  modifierdate.ui  modifieretudient.cpp  modifieretudient.h  modifieretudient.ui  modifieretudient2.cpp  modifieretudient2.h  modifieretudient2.ui  modifiermassar.cpp  modifiermassar.h  modifiermassar.ui  modifiernote.cpp  (+14 more)
